--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,11 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: docker build
+        run: docker build --rm -t ghcr.io/krsuhjunho/almalinux8-systemd .
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: docker push
+        run: docker push ghcr.io/krsuhjunho/almalinux8-systemd
+
+      
